# api-server

./: .gitignore  .travis.yml  LICENSE  Procfile  README.md  api-server.cabal  cabal.config  stack.yaml
db/: schema.sql
lib/Api/: Abstract.hs  Routes.hs  Server.hs
lib/Api/Controllers/: Resource.hs  User.hs
lib/Api/Helpers/: Controller.hs
lib/Api/Mailers/: Verify.hs
lib/Api/Mappers/: PendingUserResource.hs  Resource.hs  User.hs
lib/Api/Types/: Config.hs  Fields.hs  PendingUserResource.hs  Resource.hs  Server.hs  User.hs
src/: Main.hs
test/: SpecHelper.hs
test/Api/Controllers/: ResourceSpec.hs  UserSpec.hs
test/Api/Mappers/: PendingUserResourceSpec.hs  ResourceSpec.hs  UserSpec.hs
test/Api/Types/: ResourceSpec.hs  UserSpec.hs
