name:          api-server
version:       0.0.1
synopsis:      API Server
description:   A JSON API server written in Haskell
license:       MIT
license-file:  LICENSE
author:        Chris Wilson <christopher.j.wilson@gmail.com> and Jon Childress <jon@childr.es>
maintainer:    christopher.j.wilson@gmail.com
category:      Network
build-type:    Simple
cabal-version: >= 1.10
source-repository head
  type:        git
  location:    https://github.com/bendyworks/api-server.git


library
  default-language:
      Haskell2010
  ghc-options:
      -W -Wall -Werror
  build-tools:
      happy >= 1.19
  hs-source-dirs:
      lib
  exposed-modules:
      Api.Abstract
    , Api.Controllers.Resource
    , Api.Controllers.User
    , Api.Helpers.Controller
    , Api.Mailers.Verify
    , Api.Mappers.PendingUserResource
    , Api.Mappers.Resource
    , Api.Mappers.User
    , Api.Routes
    , Api.Server
    , Api.Types.Config
    , Api.Types.Fields
    , Api.Types.PendingUserResource
    , Api.Types.Resource
    , Api.Types.Server
    , Api.Types.User
  build-depends:
      base
    , aeson
    , bytestring
    , email-validate
    , hasql
    , hasql-backend
    , hasql-postgres
    , hspec-wai-json
    , http-types
    , mime-mail
    , mtl
    , network
    , network-uri
    , resource-pool
    , scotty
    , smtp-mail
    , stm
    , text
    , time
    , transformers
    , vector
    , wai
    , wai-extra
    , warp
  default-extensions:
      OverloadedStrings
    , DeriveDataTypeable
    , GeneralizedNewtypeDeriving
    , MultiParamTypeClasses



executable api-server
  default-language:
      Haskell2010
  ghc-options:
      -W -Wall -Werror
  hs-source-dirs:
      src
  main-is:
      Main.hs
  build-depends:
      base
    , bytestring
    , api-server
    , network-uri
    , text



test-suite api-test
  default-language:
      Haskell2010
  ghc-options:
      -W -Wall -Werror
  hs-source-dirs:
      test, lib
  main-is:
      Spec.hs
  type:
      exitcode-stdio-1.0
  build-depends:
      base
    , aeson
    , aeson-qq
    , bytestring
    , email-validate
    , hasql
    , hasql-backend
    , hasql-postgres
    , hspec
    , hspec-wai >= 0.5.1
    , hspec-wai-json
    , http-types
    , mime-mail
    , mtl
    , network
    , network-uri
    , resource-pool
    , scotty
    , smtp-mail
    , stm
    , text
    , time
    , transformers
    , vector
    , wai
    , wai-extra
    , warp
  default-extensions:
      OverloadedStrings
    , DeriveDataTypeable
    , GeneralizedNewtypeDeriving
    , MultiParamTypeClasses
